# PADRE

./: .gitignore  EXPERIMENT_SUMMARY.md  README.md  README_PADRE.md  padre_experiment.py  pyproject.toml  run_table.py
configs/: best_settings.json
docs/: PROJECT_STRUCTURE.md  REPRODUCTION.md
padre/: __init__.py  cli.py  config.py  controller.py  data.py  experiment.py  table.py  training.py  utils.py
padre/models/: __init__.py  itransformer.py  layers.py  linear.py  patchtst.py  tcn.py
tests/: test_smoke.py
