[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "padre-reproduction"
version = "0.1.0"
description = "PyTorch reproduction of PADRE for delayed-feedback online time-series forecasting."
readme = "README_PADRE.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "torch",
]

[tool.setuptools.packages.find]
include = ["padre*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
